commit al master del blogpost en su vercion mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-    <h1>Aqui haremos la pagina</h1>
-    <p>el primer parrafo</p>
-
+    <div id="container">
+        <div id="post">
+            <h1>Pagina atractiva y interesante</h1>
+            <p>Todo lo que se puede hacer con ramas</p>
+        </div>
+    </div>
 </body>
 
 </html>
