estrucutra inicial de la cabezera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Pagina atractiva y interesante</h1>
             <p>Todo lo que se puede hacer con ramas</p>
