--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Pagina atractiva y interesante</h1>
             <p>Todo lo que se puede hacer con ramas</p>
+            <p>Nuevo parrafo</p>
         </div>
     </div>
 </body>
