agregue subscripcion ṕuse todo pink

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,14 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de maestros
             </span>
         </div>
         <div id="post">
             <h1>Pagina atractiva y interesante</h1>
             <p>Todo lo que se puede hacer con ramas</p>
             <p>Nuevo parrafo</p>
+            <p>Suscribite y dale like</p>
         </div>
     </div>
 </body>
