cambio de titulo
siuuuu

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>hola como estan</title>
+    <title>Bienvenido a todos</title>
     <link rel="stylesheet" href="css/estilo.css" />
 
 </head>
