--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a todos vamos emailllll</title>
+    <title>Bienvenido a todos vamos emailllll 2.0</title>
     <link rel="stylesheet" href="css/estilo.css" />
 
 </head>
