--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de cabecera
+                Tu blog de cabecera es ahora o nunca
             </span>
         </div>
         <div id="post">
